# jitchatapp

./: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs  transcription.rs
src/collections/: channels.ts  documents.ts
src/components/AccountSwitcher/: AccountAvatar.tsx  AccountSwitcher.tsx
src/components/Avatar/: Avatar.tsx
src/components/ChannelsLayout/: CenterPanel.tsx  ChannelTreeView.tsx  ContextBar.tsx  InlineEditable.tsx  Layout.tsx  LeftPanel.tsx  Navigation.tsx
src/components/Editor/: Editor.tsx
src/components/Editor/components/: FloatingToolbarButton.tsx  FollowIndicator.tsx  FollowNotification.tsx  PingMenu.tsx
src/components/Editor/contexts/: FollowChannelContext.tsx
src/components/Editor/examples/: ParagraphDraftExample.tsx  PluginTestExample.tsx
src/components/Editor/nodes/: ExtendedImageNode.tsx  ExtendedLineBreakNode.ts  ExtendedListItemNode.ts  ExtendedListNode.ts  ExtendedParagraphNode.ts  ExtendedQuoteNode.ts  (+5 more)
src/components/Icon/: Icon.tsx
src/components/Input/: Input.tsx
src/components/LoginScreen/: LoginScreen.tsx
src/components/Tooltip/: Tooltip.tsx
src/contexts/: auth.tsx  channels.tsx  phoenix-socket.tsx  presence.tsx  theme.tsx
src/hooks/: useChannel.ts  useChannels.ts  useChannelsElectric.ts  useFollowChannel.ts
src/pages/: Home.tsx  Settings.tsx
src/services/: auth.ts  channels.ts  upload.ts
src/utils/: avatar.ts
(+28 files in other folders)
